--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,4 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -11,15 +6,14 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: RyanUsherTattoo_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: RyanUsherTattoo_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: RyanUsherTattoo_production
+  username: RyanUsherTattoo
+  password: <%= ENV['RYANUSHERTATTOO_DATABASE_PASSWORD'] %>
